tests/baselines/reference/objectLiteralExcessProperties.errors.txt
objectLiteralExcessProperties.ts(9,18): error TS2561: Object literal may only specify known properties, but 'forword' does not exist in type 'Book'. Did you mean to write 'foreword'?
objectLiteralExcessProperties.ts(11,27): error TS2561: Object literal may only specify known properties, but 'foreward' does not exist in type 'Book'. Did you mean to write 'foreword'?
objectLiteralExcessProperties.ts(13,53): error TS2353: Object literal may only specify known properties, and 'forwards' does not exist in type 'Book'.
objectLiteralExcessProperties.ts(15,42): error TS2561: Object literal may only specify known properties, but 'colour' does not exist in type 'Book & Cover'. Did you mean to write 'color'?
objectLiteralExcessProperties.ts(17,26): error TS2561: Object literal may only specify known properties, but 'foreward' does not exist in type 'Book & Cover'. Did you mean to write 'foreword'?
objectLiteralExcessProperties.ts(19,57): error TS2353: Object literal may only specify known properties, and 'price' does not exist in type 'Book & Cover'.
objectLiteralExcessProperties.ts(21,5): error TS2322: Type '{ foreword: string; price: number; }' is not assignable to type 'Book & number'.
  Type '{ foreword: string; price: number; }' is not assignable to type 'number'.
objectLiteralExcessProperties.ts(23,29): error TS2353: Object literal may only specify known properties, and 'couleur' does not exist in type 'Cover | Cover[]'.
objectLiteralExcessProperties.ts(25,27): error TS2353: Object literal may only specify known properties, and 'forewarned' does not exist in type 'Book | Book[]'.
objectLiteralExcessProperties.ts(33,27): error TS2561: Object literal may only specify known properties, but 'colour' does not exist in type 'Cover'. Did you mean to write 'color'?
objectLiteralExcessProperties.ts(37,25): error TS2304: Cannot find name 'IFoo'.
objectLiteralExcessProperties.ts(39,11): error TS2322: Type '{ name: string; }' is not assignable to type 'T'.
  '{ name: string; }' is assignable to the constraint of type 'T', but 'T' could be instantiated with a different subtype of constraint 'IFoo'.
objectLiteralExcessProperties.ts(41,11): error TS2322: Type '{ name: string; prop: boolean; }' is not assignable to type 'T & { prop: boolean; }'.
  Type '{ name: string; prop: boolean; }' is not assignable to type 'T'.
    '{ name: string; prop: boolean; }' is assignable to the constraint of type 'T', but 'T' could be instantiated with a different subtype of constraint 'IFoo'.
objectLiteralExcessProperties.ts(43,43): error TS2353: Object literal may only specify known properties, and 'name' does not exist in type '{ prop: boolean; }'.
objectLiteralExcessProperties.ts(45,76): error TS2353: Object literal may only specify known properties, and 'prop' does not exist in type '{ name: string; }'.
objectLiteralExcessProperties.ts(49,44): error TS2353: Object literal may only specify known properties, and 'z' does not exist in type 'object & { x: string; }'.


==== objectLiteralExcessProperties.ts (16 errors) ====
    interface Book {
        foreword: string;
    }
    
    interface Cover {
        color?: string;
    }
    
    var b1: Book = { forword: "oops" };
                     ~~~~~~~
!!! error TS2561: Object literal may only specify known properties, but 'forword' does not exist in type 'Book'. Did you mean to write 'foreword'?
    
    var b2: Book | string = { foreward: "nope" };
                              ~~~~~~~~
!!! error TS2561: Object literal may only specify known properties, but 'foreward' does not exist in type 'Book'. Did you mean to write 'foreword'?
    
    var b3: Book | (Book[]) = [{ foreword: "hello" }, { forwards: "back" }];
                                                        ~~~~~~~~
!!! error TS2353: Object literal may only specify known properties, and 'forwards' does not exist in type 'Book'.
    
    var b4: Book & Cover = { foreword: "hi", colour: "blue" };
                                             ~~~~~~
!!! error TS2561: Object literal may only specify known properties, but 'colour' does not exist in type 'Book & Cover'. Did you mean to write 'color'?
    
    var b5: Book & Cover = { foreward: "hi", color: "blue" };
                             ~~~~~~~~
!!! error TS2561: Object literal may only specify known properties, but 'foreward' does not exist in type 'Book & Cover'. Did you mean to write 'foreword'?
    
    var b6: Book & Cover = { foreword: "hi", color: "blue", price: 10.99 };
                                                            ~~~~~
!!! error TS2353: Object literal may only specify known properties, and 'price' does not exist in type 'Book & Cover'.
    
    var b7: Book & number = { foreword: "hi", price: 10.99 };
        ~~
!!! error TS2322: Type '{ foreword: string; price: number; }' is not assignable to type 'Book & number'.
!!! error TS2322:   Type '{ foreword: string; price: number; }' is not assignable to type 'number'.
    
    var b8: Cover | Cover[] = { couleur : "non" };
                                ~~~~~~~
!!! error TS2353: Object literal may only specify known properties, and 'couleur' does not exist in type 'Cover | Cover[]'.
    
    var b9: Book | Book[] = { forewarned: "still no" };
                              ~~~~~~~~~~
!!! error TS2353: Object literal may only specify known properties, and 'forewarned' does not exist in type 'Book | Book[]'.
    
    interface Indexed {
        [n: number]: Cover;
    }
    
    var b10: Indexed = { 0: { }, '1': { } }; // ok
    
    var b11: Indexed = { 0: { colour: "blue" } }; // nested object literal still errors
                              ~~~~~~
!!! error TS2561: Object literal may only specify known properties, but 'colour' does not exist in type 'Cover'. Did you mean to write 'color'?
!!! related TS6501 objectLiteralExcessProperties.ts:28:5: The expected type comes from this index signature.
    
    // Repros inspired by #28752
    
    function test<T extends IFoo>() {
                            ~~~~
!!! error TS2304: Cannot find name 'IFoo'.
        // No excess property checks on generic types
        const obj1: T = { name: "test" };
              ~~~~
!!! error TS2322: Type '{ name: string; }' is not assignable to type 'T'.
!!! error TS2322:   '{ name: string; }' is assignable to the constraint of type 'T', but 'T' could be instantiated with a different subtype of constraint 'IFoo'.
        // No excess property checks on intersections involving generics
        const obj2: T & { prop: boolean } = { name: "test", prop: true };
              ~~~~
!!! error TS2322: Type '{ name: string; prop: boolean; }' is not assignable to type 'T & { prop: boolean; }'.
!!! error TS2322:   Type '{ name: string; prop: boolean; }' is not assignable to type 'T'.
!!! error TS2322:     '{ name: string; prop: boolean; }' is assignable to the constraint of type 'T', but 'T' could be instantiated with a different subtype of constraint 'IFoo'.
        // Excess property checks only on non-generic parts of unions
        const obj3: T | { prop: boolean } = { name: "test", prop: true };
                                              ~~~~
!!! error TS2353: Object literal may only specify known properties, and 'name' does not exist in type '{ prop: boolean; }'.
        // Excess property checks only on non-generic parts of unions
        const obj4: T & { prop: boolean } | { name: string } = { name: "test", prop: true };
                                                                               ~~~~
!!! error TS2353: Object literal may only specify known properties, and 'prop' does not exist in type '{ name: string; }'.
        // No excess property checks when union includes 'object' type
        const obj5: object | { x: string } = { z: 'abc' }
        // The 'object' type has no effect on intersections
        const obj6: object & { x: string } = { z: 'abc' }
                                               ~
!!! error TS2353: Object literal may only specify known properties, and 'z' does not exist in type 'object & { x: string; }'.
    }
    